[project]
name = "tgbot"
version = "0.1.0"
description = "tgbot"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "Telegram", module_name = "nonebot.adapters.telegram" }
]
plugins = ["nonebot_plugin_saa", "nonebot_plugin_apscheduler"]
plugin_dirs = ["tgbot/plugins"]
builtin_plugins = ["echo"]
